name:                dispatch-user
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Lupino/dispatch-user#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     User
                     , User.Types
                     , User.UserEnv
                     , User.DataSource
                     , User.DataSource.User
                     , User.DataSource.Bind
                     , User.DataSource.Table
                     , User.API

                     , User.APIHandler
                     , User.Utils
  build-depends:       base >= 4.7 && < 5
                     , unix-time
                     , text
                     , mysql-simple
                     , hashable
                     , scotty
                     , haxl
                     , resource-pool
                     , async
                     , bytestring
                     , mtl
                     , aeson
                     , http-types
                     , cryptohash
                     , hex

                     , dispatch-common
  default-language:    Haskell2010

executable dispatch-user
  hs-source-dirs:      app
  main-is:             API.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dispatch-user
                     , optparse-applicative
                     , scotty
                     , haxl
                     , warp
                     , streaming-commons
                     , wai-extra
                     , mysql-simple
                     , mysql
                     , resource-pool
                     , data-default-class
                     , yaml-config
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/dispatch
