name:                yuntan-user
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Lupino/yuntan-user#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     User
                     , User.Types
                     , User.DataSource
                     , User.DataSource.User
                     , User.DataSource.Bind
                     , User.DataSource.Table
                     , User.DataSource.Group
                     , User.API
                     , User.RawAPI

                     , User.Handler
                     , User.Utils
                     , User.GraphQL
                     , User.Config
  build-depends:       base >= 4.7 && < 5
                     , unix-time
                     , text
                     , mysql-simple
                     , hashable
                     , scotty
                     , haxl
                     , resource-pool
                     , async
                     , bytestring
                     , mtl
                     , aeson
                     , http-types
                     , cryptohash
                     , hex

                     , yuntan-common-scotty
                     , yuntan-common-scotty-type
                     , yuntan-common-json
                     , yuntan-common-list-result
                     , yuntan-common-order
                     , yuntan-common-config-mysql
                     , yuntan-common-config-redis
                     , yuntan-common-extra-config
                     , yuntan-common-redis-caching
                     , yuntan-common-graphql
                     , graphql
                     , lrucaching
                     , hedis
                     , extra
  default-language:    Haskell2010

executable yuntan-user
  hs-source-dirs:      app
  main-is:             API.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yuntan-user
                     , optparse-applicative
                     , scotty
                     , haxl
                     , warp
                     , streaming-commons
                     , wai-extra
                     , data-default-class
                     , yaml
                     , text
                     , yuntan-common-scotty-type
                     , yuntan-common-config-mysql
                     , yuntan-common-extra-config
                     , lrucaching
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-user
