name:                yuntan-user
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Lupino/yuntan-user#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     User
                     , User.Types
                     , User.DataSource
                     , User.DataSource.User
                     , User.DataSource.Bind
                     , User.DataSource.Table
                     , User.DataSource.Group
                     , User.API
                     , User.RawAPI

                     , User.Handler
                     , User.Utils
                     , User.GraphQL
                     , User.Config
  build-depends:       base >= 4.7 && < 5
                     , unix-time
                     , text
                     , hashable
                     , scotty
                     , haxl
                     , resource-pool
                     , async
                     , bytestring
                     , mtl
                     , aeson
                     , http-types
                     , cryptohash

                     , psql-utils
                     , aeson-helper
                     , aeson-result
                     , scotty-haxl
                     , scotty-utils
                     , rediscaching-haxl
                     , graphql-utils
                     , graphql
                     , hedis
                     , extra
  default-language:    Haskell2010

executable yuntan-user
  hs-source-dirs:      app
  main-is:             API.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yuntan-user
                     , optparse-applicative
                     , scotty
                     , haxl
                     , warp
                     , streaming-commons
                     , wai-extra
                     , data-default-class
                     , yaml
                     , text
                     , psql-utils
                     , scotty-haxl
                     , rediscaching-haxl
                     , lrucaching
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-user
